Fix permissions, add to PMN, edit README

--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/client_manager_microservices/tps/client_manager_adminstrator_sample.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/client_manager_microservices/tps/client_manager_adminstrator_sample.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "## Client grouping concept\n",
-    "### This notebook is used for onboarding clients for each sdlf team space\n",
+    "### This notebook is used for onboarding clients for each data lake team space\n",
     "### Each Client should be configured in the same AWS Region as the AMC INSTANCE.\n",
     "### Each client is defined by \n",
     "#### 1. AMC instance\n",
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "## Global Configs\n",
-    "#### Team name as per the foundation installation"
+    "#### Edit the following configuration for your particular AMC Instance."
    ]
   },
   {
@@ -54,13 +54,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## The Team Name configured in the SDLF platform\n",
-    "SDLF_TEAM_NAME = \"demoteam\"\n",
-    "## ARN of the secrets manager which is used to store the advertising api credentials. This has to created manually due to security compliance. \n",
-    "## It should be created in the same region as the AMC instance\n",
-    "SAS_SECRET_MANAGER_ARN = \"secret manger arn\"\n",
+    "## The Team Name configured in the SDLF Data Lake platform\n",
+    "ATS_TEAM_NAME = \"demoteam\"\n",
+    "\n",
+    "## The Dataset Name configured in the SDLF Data Lake platform\n",
+    "amc_dataset_name = \"amcdataset\"\n",
+    "\n",
     "## Region of the AMC instance\n",
-    "aws_region = \"us-east-1\""
+    "aws_region = \"us-east-1\"\n",
+    "\n",
+    "##The Name of the Child Environment Deployed In\n",
+    "ENV=\"dev\"\n",
+    "\n",
+    "# The AMC Instance Information Can Be Found on Your AMC UI Page\n",
+    "amc_api_endpoint = \"<ENTER AMC API ENDPOINT URL>\"\n",
+    "\n",
+    "amc_s3_bucket_name = \"<ENTER AMC S3 BUCKET NAME>\"\n",
+    "\n",
+    "amc_data_upload_acct = \"<ENTER ACCOUNT ID>\"\n",
+    "\n",
+    "## A Comma seperated list of Advertiser IDs. This can be retrieved from the ticket raised to the AMC team. \n",
+    "## It is the list provided while raising the AMC instance\n",
+    "\n",
+    "advertiser_ids = \"\"\n",
+    "\n",
+    "## A Comma seperated list of Entity IDs. This can be retrieved from the ticket raised to the AMC team. \n",
+    "## It is the list provided while raising the AMC instance\n",
+    "entity_ids = \"\""
    ]
   },
   {
@@ -74,33 +94,6 @@
     "if len(aws_region) == 0:\n",
     "    aws_region = str(boto3.Session().region_name)\n",
     "print(\"Region : \" + aws_region)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0939db7c",
-   "metadata": {},
-   "source": [
-    "## Sponsored Ads Base URL configuration\n",
-    "### This section might need to be updated by referring to the https://advertising.amazon.com/API/docs/en-us/get-started/how-to-use-api > API Endpoints"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "591bf9f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "sas_base_api_url = {\n",
-    "    \"us-east-1\" : \"https://advertising-api.amazon.com\",\n",
-    "    \"eu-west-1\" : \"https://advertising-api-eu.amazon.com\",\n",
-    "    \"me-south-1\" : \"https://advertising-api-fe.amazon.com\"\n",
-    "}\n",
-    "\n",
-    "print(json.dumps(sas_base_api_url, indent=4))"
    ]
   },
   {
@@ -134,7 +127,7 @@
     "pd.set_option('max_colwidth', None)\n",
     "pd.set_option('max_rows', None)\n",
     "\n",
-    "df = customer.get_customers_config(ATS_TEAM_NAME=SDLF_TEAM_NAME)\n",
+    "df = customer.get_customers_config(ATS_TEAM_NAME=ATS_TEAM_NAME)\n",
     "df.head()"
    ]
   },
@@ -152,7 +145,7 @@
    "metadata": {},
    "source": [
     "## To Insert or Update client details\n",
-    "####        Run the below cell to setup abd verify the client configuration\n",
+    "####        Run the below cell to setup and verify the client configuration\n",
     "```\n",
     "{\n",
     "    \"customer_id\": <Customer ID which will be used to tag resources like bucket prefixes and table names in the platform. It has to unique and can be the name of the amc instance>,\n",
@@ -164,30 +157,17 @@
     "    \"region\":<Region of the AMC instance. This can be requested or retrieved from the ticket raised to the AMC team>,\n",
     "    \n",
     "    \"amc\":{\n",
-    "        \"sdlf_datset_name\":<Name of the dataset which is configured in SDLF to process the AMC datasets>,\n",
+    "        \"amc_datset_name\":<Name of the dataset which is configured in SDLF Data Lake to process the AMC datasets>,\n",
     "        \n",
     "        \"endpoint_url\":<AMC instance endpoint. This can be requested or retrieved from the ticket raised to the AMC team >,\n",
     "        \n",
     "        \"aws_orange_account_id\":<AMC Orange Account. This can be requested or retrieved from the ticket raised to the AMC team>,\n",
-    "        \n",
-    "        \"aws_green_account_id\":<AMC Green Account. This can be requested or retrieved from the ticket raised to the AMC team>,\n",
-    "        \n",
+    "                \n",
     "        \"bucket_name\":<Name of the bucket for the AMC Dataset landing bucket in your AWS account. This can be requested or retrieved from the ticket raised to the AMC team>,\n",
     "        \n",
     "        \"advertiser_ids\":<Comma seperated list of advertiser ids. This can be retrieved from the ticket raised to the AMC team. It is the list provided while raising the AMC instance>,\n",
     "        \n",
     "        \"entity_ids\":<Comma seperated list of Entity ids. This can be retrieved from the ticket raised to the AMC team. It is the list provided while raising the AMC instance>\"\n",
-    "    }  ,  \n",
-    "    \n",
-    "    \"sas\":{\n",
-    "        \n",
-    "        \"sdlf_datset_name\":<Name of the dataset which is configured in SDLF to process the AMC datasets>,\n",
-    "        \n",
-    "        \"credential_arn\":<ARN of the secrets manager which is used to store the advertising api credentials. This has to created manually due to security compliance>,\n",
-    "        \n",
-    "        \"profile_details\":<Comma seperated Profile ids for which Sponsored Products/Brands/displayADs/DSP related reports/metadata are retrieved. It can be set to \"ALL\" if reports/metadata needs to retrieved for all profile ids. The list of profile IDs can be found on Advertising API console. You can also use the \"Retrieve Profiles\" section to get a list of >\n",
-    "        \n",
-    "        \"api_base_url\":<This is the base url used for specific region. In the \"Sponsored Ads Base URL configuration\" section has details about region specific API's base urls. This section might need to be updated by referring to the https://advertising.amazon.com/API/docs/en-us/get-started/how-to-use-api > API Endpoints >\n",
     "    }\n",
     "}\n",
     "```"
@@ -202,19 +182,19 @@
    "source": [
     "import json\n",
     "\n",
+    "\n",
     "customer_details = {\n",
     "    \"customer_id\":\"democustomer\",\n",
     "    \"customer_name\":\"DemoCustomer\",\n",
     "    \"customer_type\": \"ENDEMIC\",\n",
     "    \"region\":aws_region,\n",
     "    \"amc\":{\n",
-    "        \"sdlf_datset_name\":\"amcdataset\",\n",
-    "        \"endpoint_url\":\"<amc url>\",\n",
-    "        \"aws_orange_account_id\":\"<amc orange account number>\",\n",
-    "        \"aws_green_account_id\":\"<amc green account number>\",\n",
-    "        \"bucket_name\":\"<amc bucketname>\",\n",
-    "        \"advertiser_ids\":\"<comma seperated advertiser ids>\",\n",
-    "        \"entity_ids\":\"<comma seperated entity ids>\"\n",
+    "        \"amc_dataset_name\":amc_dataset_name,\n",
+    "        \"endpoint_url\": amc_api_endpoint,\n",
+    "        \"aws_orange_account_id\": amc_data_upload_acct,\n",
+    "        \"bucket_name\": amc_s3_bucket_name,\n",
+    "        \"advertiser_ids\": advertiser_ids,\n",
+    "        \"entity_ids\": entity_ids\n",
     "    }\n",
     "}\n",
     "\n",
@@ -227,7 +207,9 @@
    "metadata": {},
    "source": [
     "### Run the below cell to submit the client configuration. \n",
-    "#### Before submitting verify the configuration by running the above cell"
+    "#### Before submitting verify the configuration by running the above cell\n",
+    "\n",
+    "Submitting the client configuration will create the client's AMC S3 bucket and configure / onboard the client."
    ]
   },
   {
@@ -241,17 +223,9 @@
     "\n",
     "import boto3\n",
     "\n",
-    "dynamodb_resp_wr = customer.set_customers_config(customer_details=customer_details, ATS_TEAM_NAME=SDLF_TEAM_NAME)\n",
+    "dynamodb_resp_wr = customer.set_customers_config(customer_details=customer_details, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_wr"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "582e68b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
