--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/client_manager_microservices/tps/tps_GettingStarted.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/client_manager_microservices/tps/tps_GettingStarted.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Client grouping concept\n",
-    "### This notebook is used for onboarding clients for each sdlf team space\n",
+    "### This notebook is used for onboarding clients for each data lake team space\n",
     "### Each Client should be configured in the same AWS Region as the AMC INSTANCE.\n",
     "### Each client is defined by \n",
     "#### 1. AMC instance\n",
@@ -46,14 +46,6 @@
     "####   Please refer the client_manager_adminstrator_sample retrieve section then update the configuration using To Insert or Update client details section.\n",
     "#### ----------------------------------------"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "629de2e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
