--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/customerConfig_wfm_sample.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/customerConfig_wfm_sample.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Customer Config\n",
-    "#### DynamoDB Table - wfm-&lt;teamName&gt;-&lt;pipelineName&gt;-CustomerConfig\n"
+    "#### DynamoDB Table : wfm-&lt;teamName&gt;-CustomerConfig-&lt;env&gt;\n"
    ]
   },
   {
@@ -23,16 +23,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9ec0853",
+   "metadata": {},
+   "source": [
+    "## Global Configs\n",
+    "#### Edit the following configuration for your particular AMC Instance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ab75198e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SDLF_TEAM_NAME = \"demoteam\"\n",
+    "## The Team Name configured in the SDLF Data Lake platform\n",
+    "ATS_TEAM_NAME = \"demoteam\"\n",
+    "\n",
     "aws_region = \"us-east-1\"\n",
+    "\n",
+    "ENV=\"dev\"\n",
+    "\n",
     "aws_account_number = '<current aws account number>'\n",
-    "customerId = 'democustomer'"
+    "\n",
+    "customerId = 'democustomer'\n",
+    "\n",
+    "customerName = \"DemoCustomer\"\n",
+    "\n",
+    "# The AMC Instance API Endpoint URL Can Be Found on Your AMC UI Page\n",
+    "amc_api_endpoint = \"<AMC-API-ENDPOINT-URL>\"\n"
    ]
   },
   {
@@ -133,18 +153,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# customer configuration record (normally read from the the dynamodb table; format: {microservicename}-{teamname}-{pipelinename}-CustomerConfig)\n",
+    "# customer configuration record (normally read from the the dynamodb table; format: {microservicename}-{teamname}-CustomerConfig-{env})\n",
     "customer_config_record = {\n",
     "  \"AMC\": {\n",
     "    \"amcAccessCategory\": \"EXTERNAL\",\n",
-    "    \"amcApiEndpoint\": \"<amc url>\",\n",
-    "    \"amcGreenAwsAccount\": \"<amc green account number>\",\n",
+    "    \"amcApiEndpoint\": f\"{amc_api_endpoint}\",\n",
     "    \"amcInstanceRegion\": f'{aws_region}',\n",
-    "    \"amcWorkflowPackages\": \"democustomer\",\n",
+    "    \"amcWorkflowPackages\": f\"{customerId}\",\n",
     "    \"maximumConcurrentWorkflowExecutions\": 10,\n",
     "    \"WFM\": {\n",
-    "      \"amcWorkflowExecutionDLQSQSQueueName\": f'wfm-{SDLF_TEAM_NAME}-dlhs-dev-workflowExecution-{customerId}-DLQ.fifo',\n",
-    "      \"amcWorkflowExecutionSQSQueueName\": f'wfm-{SDLF_TEAM_NAME}-dlhs-dev-workflowExecution-{customerId}.fifo',\n",
+    "      \"amcWorkflowExecutionDLQSQSQueueName\": f'wfm-{ATS_TEAM_NAME}--{ENV}-workflowExecution-{customerId}-DLQ.fifo',\n",
+    "      \"amcWorkflowExecutionSQSQueueName\": f'wfm-{ATS_TEAM_NAME}--{ENV}-workflowExecution-{customerId}.fifo',\n",
     "      \"enableWorkflowLibraryNewContent\": True,\n",
     "      \"enableWorkflowLibraryRemoval\": True,\n",
     "      \"enableWorkflowLibraryScheduleCreation\": True,\n",
@@ -152,16 +171,16 @@
     "      \"enableWorkflowLibraryUpdates\": True,\n",
     "      \"runWorkflowByCampaign\": {\n",
     "        \"campaignAttributionLagDays\": 14,\n",
-    "        \"campaignListDatabaseName\": f'{SDLF_TEAM_NAME}_amcdataset_dev_analytics',\n",
+    "        \"campaignListDatabaseName\": f'{ATS_TEAM_NAME}_amcdataset_dev_analytics',\n",
     "        \"campaignListTableName\": f'{customerId}_active_campaigns_advertisers_v1_adhoc',\n",
     "        \"defaultWorkflowExecutionTimeZone\": \"America/New_York\",\n",
     "        \"maximumCampaignAgeDays\": 90,\n",
     "        \"maximumCampaignEndAgeDays\": 18,\n",
     "        \"minimumCampaignAgeDays\": 3\n",
     "      },\n",
-    "      \"snsTopicArn\": f'arn:aws:sns:{aws_region}:{aws_account_number}:wfm-{SDLF_TEAM_NAME}-dlhs-SNSTopic',\n",
+    "      \"snsTopicArn\": f'arn:aws:sns:{aws_region}:{aws_account_number}:wfm-{ATS_TEAM_NAME}-SNSTopic-{ENV}',\n",
     "      \"syncWorkflowStatuses\": {\n",
-    "        \"amcWorkflowExecutionTrackingDynamoDBTableName\": f'wfm-{SDLF_TEAM_NAME}-dlhs-AMCExecutionStatus',\n",
+    "        \"amcWorkflowExecutionTrackingDynamoDBTableName\": f'wfm-{ATS_TEAM_NAME}-AMCExecutionStatus-{ENV}',\n",
     "        \"lastSyncedTime\": \"2021-06-09T23:31:55\",\n",
     "        \"latestLastUpdatedTime\": \"2021-06-09T22:54:24Z\",\n",
     "        \"workflowExecutionStatusLookBackHours\": 72,\n",
@@ -173,7 +192,7 @@
     "  },\n",
     "  \"customer_hash_key\": customerId,\n",
     "  \"customerId\": customerId,\n",
-    "  \"customerName\": \"DemoCustomer\",\n",
+    "  \"customerName\": customerName,\n",
     "  \"customerPrefix\": customerId,\n",
     "  \"endemicType\": \"ENDEMIC\"\n",
     "}\n",
@@ -196,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dynamodb_resp_wr = customerConfig.set_customer_config(customer_details=customer_config_record, ATS_TEAM_NAME=SDLF_TEAM_NAME)\n",
+    "dynamodb_resp_wr = customerConfig.set_customer_config(customer_details=customer_config_record, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_wr"
    ]
   },
@@ -219,7 +238,7 @@
     "pd.set_option('max_colwidth', None)\n",
     "pd.set_option('max_rows', None)\n",
     "\n",
-    "df = customerConfig.get_customer_config(ATS_TEAM_NAME=SDLF_TEAM_NAME)\n",
+    "df = customerConfig.get_customer_config(ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "df.head()"
    ]
   },
@@ -238,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dynamodb_resp_dl = customerConfig.delete_customer_config(customerId=customerId, ATS_TEAM_NAME=SDLF_TEAM_NAME)\n",
+    "dynamodb_resp_dl = customerConfig.delete_customer_config(customerId=customerId, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_dl"
    ]
   },
