--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/wfm_GettingStarted.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/wfm_GettingStarted.ipynb
@@ -17,6 +17,7 @@
     "#### The Workflow Manager can be used to manage and schedule AMC workflows\n",
     "#### The Workflow Manager notebooks are region specific\n",
     "\n",
+    "### The Following list of notebooks are provided for you to help create, update, delete, schedule, and manage your workflows:\n",
     "#### 1. customerConfig_wfm_sample - This notebook provide steps to add/update/remove existing AMC clinets. The customer is automatically to on board new clients and enable AMC and sponsored Ads with default configuration. You can duplicate this notebook and maintain a notebook for each client.\n",
     "\n",
     "\n",
@@ -26,12 +27,13 @@
     "#### 3. workflows_wfm_sample - This notebook provide steps to add/update/remove AMC Workflows. These are AMC workflows which are created on AMC instance and ready to be scheduled.\n",
     "\n",
     "\n",
-    "\n",
     "#### 4. workflowSchedules_wfm_sample - This notebook provide steps to add/update/remove AMC Workflows schedules. These AMC workflows will be executed on a schedule as configured.\n",
     "\n",
     "#### 5. workflow_invoke_wfm_sample - This notebook provide steps to run a workflow on demand. These workflows should already be registered in the AMC instance.\n",
     "\n",
+    "#### Please refer to the FAQ Section at the bottom of this notebook for more guidance.\n",
     "\n",
+    "#### To create and run an example workflow to hydrate your data lake, edit and run the notebook cells below\n",
     "\n",
     "#### FAQs\n",
     "\n",
@@ -68,7 +70,7 @@
     "#### ----------------------------------------\n",
     "#### 8. How to run a workflow on demand instead of waiting for the scheduled time.\n",
     "####   Please refer the workflow_invoke_wfm_sample notebook.\n",
-    "#### ----------------------------------------"
+    "#### ----------------------------------------\n"
    ]
   },
   {
