--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflowLibrary_wfm_sample.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflowLibrary_wfm_sample.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Workflow Library\n",
-    "#### DynamoDB Table - wfm-&lt;teamName&gt;-&lt;pipelineName&gt;-AMCWorkflowLibrary\n",
+    "#### DynamoDB Table - wfm-&lt;teamName&gt;-AMCWorkflowLibrary-&lt;env&gt;\n",
     "\n"
    ]
   },
@@ -24,13 +24,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef8a4626",
+   "metadata": {},
+   "source": [
+    "## Global Configs\n",
+    "#### Edit the following configuration for your particular AMC Instance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fa2ca29d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SDLF_TEAM_NAME = \"demoteam\""
+    "## The Team Name configured in the SDLF Data Lake platform\n",
+    "ATS_TEAM_NAME = \"demoteam\"\n",
+    "\n",
+    "ENV=\"dev\""
    ]
   },
   {
@@ -948,7 +960,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dynamodb_resp_wr = workflowLibrary.set_workflow_record(workflow_details=workflow, ATS_TEAM_NAME=SDLF_TEAM_NAME)\n",
+    "dynamodb_resp_wr = workflowLibrary.set_workflow_record(workflow_details=workflow, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_wr"
    ]
   },
@@ -971,7 +983,7 @@
     "pd.set_option('max_colwidth', None)\n",
     "pd.set_option('max_rows', None)\n",
     "\n",
-    "df = workflowLibrary.get_workflow_record(ATS_TEAM_NAME=SDLF_TEAM_NAME)\n",
+    "df = workflowLibrary.get_workflow_record(ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "df.head()"
    ]
   },
@@ -991,7 +1003,7 @@
    "outputs": [],
    "source": [
     "workflowId = 'exposure_group_analysis' # Enter the workflowId of the record that needs to be deleted \n",
-    "dynamodb_resp_dl = workflowLibrary.delete_workflow_record(workflowId=workflowId, ATS_TEAM_NAME=SDLF_TEAM_NAME)\n",
+    "dynamodb_resp_dl = workflowLibrary.delete_workflow_record(workflowId=workflowId, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_dl"
    ]
   },
