--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflowSchedules_wfm_sample.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflowSchedules_wfm_sample.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Workflow Schedules\n",
-    "#### DynamoDB Table - wfm-&lt;teamName&gt;-&lt;pipelineName&gt;-AMCSchedules\n"
+    "#### DynamoDB Table - wfm-&lt;teamName&gt;-AMCSchedules-&lt;env&gt;\n"
    ]
   },
   {
@@ -23,14 +23,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "58bbe801",
+   "metadata": {},
+   "source": [
+    "## Global Configs\n",
+    "#### Edit the following configuration for your particular AMC Instance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b4856eeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SDLF_TEAM_NAME = \"demoteam\"\n",
+    "## The Team Name configured in the SDLF Data Lake platform\n",
+    "ATS_TEAM_NAME = \"demoteam\"\n",
+    "\n",
     "aws_region = 'us-east-1'\n",
+    "ENV=\"dev\"\n",
     "customerId = 'democustomer'\n",
     "if aws_region == '':\n",
     "    aws_region = str(boto3.Session().region_name)\n",
@@ -144,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dynamodb_resp_wr = workflowSchedules.set_workflow_schedule(workflow_details=workflow, ATS_TEAM_NAME=SDLF_TEAM_NAME)\n",
+    "dynamodb_resp_wr = workflowSchedules.set_workflow_schedule(workflow_details=workflow, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_wr"
    ]
   },
@@ -167,7 +179,7 @@
     "pd.set_option('max_colwidth', None)\n",
     "pd.set_option('max_rows', None)\n",
     "\n",
-    "df = workflowSchedules.get_workflow_schedule(ATS_TEAM_NAME=SDLF_TEAM_NAME)\n",
+    "df = workflowSchedules.get_workflow_schedule(ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "df.head()"
    ]
   },
@@ -187,7 +199,7 @@
    "outputs": [],
    "source": [
     "wf_name = f'wfm-{customerId}-exposure_group_analysis_v1'\n",
-    "dynamodb_resp_dl = workflowSchedules.delete_workflow_schedule(customerId=customerId, workflowName=wf_name, ATS_TEAM_NAME=SDLF_TEAM_NAME)\n",
+    "dynamodb_resp_dl = workflowSchedules.delete_workflow_schedule(customerId=customerId, workflowName=wf_name, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_dl"
    ]
   },
