--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflow_invoke_wfm_sample.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflow_invoke_wfm_sample.ipynb
@@ -21,14 +21,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d229fe78",
+   "metadata": {},
+   "source": [
+    "## Global Configs\n",
+    "#### Edit the following configuration for your particular AMC Instance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "72592c02",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SDLF_TEAM_NAME = \"demoteam\"\n",
+    "## The Team Name configured in the SDLF Data Lake platform\n",
+    "ATS_TEAM_NAME = \"demoteam\"\n",
+    "\n",
     "aws_region = 'us-east-1'\n",
+    "ENV=\"dev\"\n",
     "customerId = 'democustomer'\n",
     "if aws_region == '':\n",
     "    aws_region = str(boto3.Session().region_name)\n",
@@ -105,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = workflowInvoke.invoke_workflow(workflow, SDLF_TEAM_NAME)\n",
+    "response = workflowInvoke.invoke_workflow(workflow, ATS_TEAM_NAME, ENV)\n",
     "response"
    ]
   }
