--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflows_wfm_sample.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflows_wfm_sample.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "source": [
     "## Workflows\n",
-    "#### DynamoDB Table - wfm-&lt;teamName&gt;-&lt;pipelineName&gt;-AMCWorkflows"
+    "#### DynamoDB Table - wfm-&lt;teamName&gt;-AMCWorkflowLibrary-&lt;env&gt;\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -23,14 +26,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "95702302",
+   "metadata": {},
+   "source": [
+    "## Global Configs\n",
+    "#### Edit the following configuration for your particular AMC Instance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8773038d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SDLF_TEAM_NAME = \"demoteam\"\n",
+    "## The Team Name configured in the SDLF Data Lake platform\n",
+    "ATS_TEAM_NAME = \"demoteam\"\n",
+    "\n",
     "aws_region = 'us-east-1'\n",
+    "ENV=\"dev\"\n",
     "customerId = 'democustomer'\n",
     "if aws_region == '':\n",
     "    aws_region = str(boto3.Session().region_name)\n",
@@ -983,7 +998,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dynamodb_resp_wr = workflows.set_workflow_record(workflow_details=workflow, ATS_TEAM_NAME=ATS_TEAM_NAME)\n",
+    "dynamodb_resp_wr = workflows.set_workflow_record(workflow_details=workflow, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_wr"
    ]
   },
@@ -1006,7 +1021,7 @@
     "pd.set_option('max_colwidth', None)\n",
     "pd.set_option('max_rows', None)\n",
     "\n",
-    "df = workflows.get_workflow_record(ATS_TEAM_NAME=ATS_TEAM_NAME)\n",
+    "df = workflows.get_workflow_record(ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "df.head()"
    ]
   },
@@ -1026,7 +1041,7 @@
    "outputs": [],
    "source": [
     "workflowId = 'exposure_group_analysis_v1' # Enter the workflowId of the record that needs to be deleted \n",
-    "dynamodb_resp_dl = workflows.delete_workflow_record(customerId=customerId, workflowId=workflowId, ATS_TEAM_NAME=ATS_TEAM_NAME)\n",
+    "dynamodb_resp_dl = workflows.delete_workflow_record(customerId=customerId, workflowId=workflowId, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_dl"
    ]
   },
